# veloleo

./: .gitignore  .gitmodules  Dockerfile  README.md  bike_heatmap.geojson  bike_heatmap.gpkg  main.py  pyproject.toml  workflow.toml
dashboard/: README.md  package-lock.json  package.json
dashboard/src/lib/: index.ts
dashboard/src/lib/components/: Map.svelte
dashboard/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
dashboard/src/routes/images/[filename]/: +server.js
data/: bike_heatmap.geojson  bike_heatmap.gpkg
veloleo/: __init__.py  __main__.py  bike_map.py  events.py  map.py  matcher.py  plot.py  routes.py
