[project]
name = "veloleo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.4",
    "geopy>=2.4.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "tqdm>=4.68.3",
]
